--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
 }
 
 .payment__check:checked + .payment__span::before {
-  background-image: url(/images/check-purple.svg);
+  background-image: url(./images/check-purple.svg);
 }
 
 .payment__span {
@@ -105,7 +105,7 @@
   content: '';
   width: 35px;
   height: 35px;
-  background-image: url(/images/check-black.svg);
+  background-image: url(./images/check-black.svg);
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
